--- a/index.html
+++ b/index.html
@@ -18,14 +18,26 @@
     }
 
     .chat-container {
-      width: 420px;
-      background: #222;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 0 30px rgba(0, 255, 255, 0.3);
-      display: flex;
-      flex-direction: column;
-    }
+  width: 420px;
+  height: 600px; /* container height fixed */
+  background: #222;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 30px rgba(0, 255, 255, 0.3);
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-box {
+  flex: 1;
+  overflow-y: auto;
+  padding: 15px;
+  background: #111;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  scroll-behavior: smooth;
+}
 
     h2 {
       background: #0ff;
@@ -38,14 +50,19 @@
       letter-spacing: 1px;
     }
 
-    .chat-box {
-      flex: 1;
-      overflow-y: auto;
-      padding: 15px;
-      background: #111;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
+    
+
+    .chat-box::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    .chat-box::-webkit-scrollbar-thumb {
+      background: #0ff;
+      border-radius: 10px;
+    }
+
+    .chat-box::-webkit-scrollbar-track {
+      background: #222;
     }
 
     .message {
